  the order when an user without addresses enters checkout.
- Issue #1866096 by MegaChriz: populate extra fields from previous orders.
- Issue #1871916 by MegaChriz: display a warning when a field handler is
  missing.
- Issue #1894858 by MegaChriz: made API change in UcAddressesPermissions to
  be able to check access for other users.

Ubercart Addresses 7.x-1.0-alpha1, 2012-10-11
------------------------------
- Issue #1104854 by MegaChriz: ported Ubercart Addresses 6.x-2.x to
  Drupal 7.

Ubercart Addresses 6.x-2.0-alpha2, 2012-10-11
------------------------------
- Issue #1381120 by MegaChriz: fixed foreach warning in address book when
  user has no addresses.
- Issue #1382088 by MegaChriz: added automated tests.
- by MegaChriz: backport of several changes made in 7.x-1.x branch.
- Issue #1412060 by MegaChriz: renamed permissions that contained an
  apostrophe: "everyone's" has been replaced by "all".
- Issue #1578362 by MegaChriz: implemented address tokens in order context.
- Issue #1668666 by miccelito, MegaChriz: make default addresses on address
  book page better themable.
- Issue #1670124 by MegaChriz: renamed theme hook "uc_addresses_pane" to
  "uc_addresses_form".
- Issue #1678406 by MegaChriz: fixed bug while loading Ubercart order which
  could result into a UcAddressesInvalidFieldException error when the order
  had fields starting with 'delivery' or 'billing' that were unknown to
  Ubercart Addresses.
- Issue #1391216 by MegaChriz, phead, MegaChriz: added basic Views
  integration.
- Issue #1382088 by MegaChriz: adjusted automated tests 'checkout' to be
  consistent with Ubercart's checkout test.
- Issue #1382088 by MegaChriz: changed methods getEditAddressValues() and
  generateAddressFieldValue() from UcAddressesTestCase class from
  'protected' to 'public static'.
- Issue #1735678 by MegaChriz: added an test for checking autofilling
  addresses on checkout.
- Issue #1785168 by MegaChriz: Ensure new addresses are saved after
  checkout.